2011-02-01  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Martin Robinson.

        [GTK] character range extents is off when the end of a wrapped line is included
        https://bugs.webkit.org/show_bug.cgi?id=53323

        Fixed wrong calculation getting the range extents.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_text_get_range_extents): Removed '+1' since the
        requested interval shouldn't include the last character.
2011-02-01  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] character range extents is off when the end of a wrapped line is included
        https://bugs.webkit.org/show_bug.cgi?id=53323

        Update unit test to check the fix for this bug.

        * tests/testatk.c:
        (testWebkitAtkGetExtents): Check that the extent for a full line
        are the same height than for a partial section of the same line.

Canonical link: https://commits.webkit.org/67348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77234 268f45cc-cd09-0410-ab3c-d52691b4dbfc